Project

General

Profile

Actions

Bug #18961

closed

objecter continually resends ops which don't have a callback

Added by Samuel Just about 7 years ago. Updated about 7 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

This is triggered by the delete op sent during OSD flush.

Actions #1

Updated by Samuel Just about 7 years ago

  • Status changed from 7 to Fix Under Review
Actions #2

Updated by Samuel Just about 7 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF